# challenges

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
src/data_structures/linked_lists/: CMakeLists.txt
src/data_structures/tree/: CMakeLists.txt
src/hacker_rank/: CMakeLists.txt
src/hacker_rank/algorithms/: CMakeLists.txt
src/hacker_rank/all_contests/: CMakeLists.txt
src/hacker_rank/array_left_rotation/: CMakeLists.txt  input01.txt  input02.txt  main.cpp  output01.txt  output02.txt
src/hacker_rank/bubble_sort/: CMakeLists.txt  main.cpp  output00.txt  output01.txt  output02.txt
src/hacker_rank/comparator_sorting/: CMakeLists.txt  input01.txt  input02.txt  main.cpp  output01.txt  output02.txt
src/hacker_rank/count_triplets/: CMakeLists.txt  input00.txt  input02.txt  input03.txt  input06.txt  input10.txt  main.cpp  output10.txt
src/hacker_rank/counting_valleys/: CMakeLists.txt  main.cpp
src/hacker_rank/fraudulent_activity_notifications/: CMakeLists.txt  main.cpp
src/hacker_rank/frequency_queries/: CMakeLists.txt  input00.txt  main.cpp
src/hacker_rank/friend_circle_queries/: CMakeLists.txt  input01.txt  input05.txt  input07.txt  input10.txt  input14.txt  main.cpp  output05.txt  output07.txt  output10.txt  output14.txt
src/hacker_rank/interview/: CMakeLists.txt
src/hacker_rank/jumping_on_the_clouds/: CMakeLists.txt  main.cpp
src/hacker_rank/mark_and_toys/: CMakeLists.txt  main.cpp
src/hacker_rank/merge_sort_counting_inversions/: CMakeLists.txt  input02.txt  input14.txt  input15.txt  main.cpp  output02.txt  output13.txt
src/hacker_rank/minimum_swaps/: CMakeLists.txt  input00.txt  input01.txt  main.cpp
src/hacker_rank/new_year_chaos/: CMakeLists.txt  main.cpp
src/hacker_rank/ransom_note/: CMakeLists.txt  main.cpp
src/hacker_rank/repeated_string/: CMakeLists.txt  main.cpp
src/hacker_rank/sherlock_and_anagrams/: CMakeLists.txt  input03.txt  main.cpp  output03.txt
src/hacker_rank/sock_merchant/: CMakeLists.txt  input01.txt  main.cpp
src/hacker_rank/two_strings/: CMakeLists.txt  main.cpp
src/leet_code/: CMakeLists.txt
src/leet_code/check_if_there_is_a_valid_partition_for_the_array/: CheckIfThereIsAValidPartitionForTheArray.kt  CheckIfThereIsAValidPartitionForTheArrayTest.kt
src/leet_code/coin_change_ii/: CoinChangeII.kt  CoinChangeIITest.kt
src/leet_code/cpp_calculate_money_in_leetcode_bank/: CMakeLists.txt  main.cpp
src/leet_code/find_good_days_to_rob_the_bank/: CMakeLists.txt  input00.txt  input01.txt  input02.txt  input03.txt  input04.txt  input05.txt  main.cpp  output05.txt
src/leet_code/find_kth_largest/: FindKthLargest.kt  FindKthLargestTest.kt
src/leet_code/flip_string_to_monotone_increasing/: CMakeLists.txt  input01.txt  input02.txt  input03.txt  main.cpp
src/leet_code/kotlin_104_maximum_depth_of_binary_tree/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_1106_parsing_a_boolean_expression/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_1233_remove_sub_folders_from_the_filesystem/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_125_valid_palindrome/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_1277_count_square_submatrices_with_all_ones/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_1282_group_the_people_given_the_group_size_they_belong_to/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_12_integer_to_roman/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_1337_the_k_weakest_rows_in_a_matrix/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_134_gas_station/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_135_candy/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_13_roman_to_integer/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_141_linked_list_cycle/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_1424_diagonal_traverse_ii/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_146_lru_cache/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_151_reverse_words_in_a_string/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_1561_maximum_number_of_coins_you_can_get/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_1630_arithmetic_subarrays/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_1685_sum_of_absolute_differences_in_a_sorted_array/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_169_majority_element/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_1727_largest_submatrix_with_rearrangements/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_1814_count_nice_pairs_in_an_array/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_1829_maximum_xor_for_each_query/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_189_rotate_array/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_1942_the_number_of_the_smallest_unoccupied_chair/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_1971_find_if_path_exists_in_graph/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_209_minimum_size_subarray_sum/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_2186_minimum_number_of_steps_to_make_two_strings_anagram_ii/: MinimumNumberOfStepsToMakeTwoStringsAnagramII.kt  MinimumNumberOfStepsToMakeTwoStringsAnagramIITest.kt
src/leet_code/kotlin_21_merge_two_sorted_lists/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_228_sumary_ranges/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_228_summary_ranges/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_2366_minimum_replacements_to_sort_the_array/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_2370_longest_ideal_subsequence/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_2391_minimum_amount_of_time_to_collect_garbage/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_239_sliding_window_maximum/: SlidingWindowMaximum.kt  SlidingWindowMaximumTest.kt
src/leet_code/kotlin_2406_divide_intervals_into_minimum_number_of_groups/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_2477_minimum_fuel_cost_to_report_to_the_capital/: Solution.kt  SolutionTest.kt
src/leet_code/kotlin_2483_minimum_penalty_for_a_shop/: Solution.kt  SolutionTest.kt
(+366 files in other folders)
