cmake_minimum_required(VERSION 3.16)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(algorithms)
add_subdirectory(all_contests)
add_subdirectory(data_structures)
add_subdirectory(sock_merchant)
add_subdirectory(counting_valleys)
add_subdirectory(jumping_on_the_clouds)
add_subdirectory(repeated_string)
add_subdirectory(array_left_rotation)
