cmake_minimum_required(VERSION 3.16)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(algorithms)
add_subdirectory(all_contests)
add_subdirectory(data_structures)
add_subdirectory(sock_merchant)
add_subdirectory(counting_valleys)
add_subdirectory(jumping_on_the_clouds)
add_subdirectory(repeated_string)
add_subdirectory(array_left_rotation)
add_subdirectory(new_year_chaos)
add_subdirectory(minimum_swaps)
add_subdirectory(ransom_note)
add_subdirectory(two_strings)
add_subdirectory(sherlock_and_anagrams)
add_subdirectory(count_triplets)
add_subdirectory(frequency_queries)