cmake_minimum_required(VERSION 3.16)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(print_the_elements_of_a_linked_list)
add_subdirectory(insert_a_node_at_the_tail_of_a_linked_list)
add_subdirectory(insert_a_node_at_the_head_of_a_linked_list)
add_subdirectory(insert_a_node_at_a_specific_position_in_a_linked_list)
add_subdirectory(delete_a_node)
add_subdirectory(print_in_reverse)
add_subdirectory(reverse_a_linked_list)
add_subdirectory(compare_two_linked_lists)
add_subdirectory(merge_two_sorted_linked_lists)
add_subdirectory(get_node_value)
add_subdirectory(delete_duplicate_value_nodes_from_a_sorted_linked_list)
add_subdirectory(cycle_detection)
