cmake_minimum_required(VERSION 3.16)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(array_pairs)
add_subdirectory(tree_preorder_traversal)
add_subdirectory(tree_postorder_traversal)
add_subdirectory(tree_inorder_traversal)
add_subdirectory(tree_height_of_a_binary_tree)
add_subdirectory(tree_top_view)
add_subdirectory(tree_level_order_traversal)
add_subdirectory(binary_search_tree_insertion)
